--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/* impor de police */
+@font-face {
+    font-family: 'calculator';
+    src: url('Calculator.ttf')format('truetype');
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f0f0f0;
@@ -22,11 +28,24 @@ body {
 #display {
     height: 50px;
     margin-bottom: 10px;
-    font-size: 20px;
+    font-size: 30px;
+    font-weight: bold;
     text-align: right;
     border: none;
     border-radius: 5px;
     padding: 5px;
+    font-family: Calculator;
+    color: rgba(0, 237, 0, 1);
+    text-shadow:
+        0 0 2px rgba(0, 237, 0, 0.5),
+        0 0 4px rgba(0, 237, 0, 0.5),
+        0 0 6px rgba(0, 237, 0, 0.5),
+        0 0 8px rgba(0, 237, 0, 0.5),
+        0 0 10px rgba(0, 237, 0, 0.5);
+    background-image: linear-gradient(to bottom, rgba(0, 237, 0, 1) -12%, #000 20%);
+    letter-spacing: 2px;
+
+
 
 }
 
