--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f0f0f0;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: 100vh;
 
@@ -44,9 +44,10 @@ body {
         0 0 10px rgba(0, 237, 0, 0.5);
     background-image: linear-gradient(to bottom, rgba(0, 237, 0, 1) -12%, #000 20%);
     letter-spacing: 2px;
+}
 
-
-
+#display:focus {
+    outline: none;
 }
 
 #buttons {
@@ -76,10 +77,37 @@ button {
 .equal {
     background-color: #4caf50;
     color: #fff;
-    grid-column: span 4;
+    grid-column: span 2;
 }
 
 .clear {
     background-color: red;
     color: #fff;
 }
+
+.delete {
+    background-color: #def436;
+    color: #000;
+    border: 1px solid #000;
+}
+
+/* style du tableau  */
+table {
+    border-collapse: collapse;
+    width: 100%;
+    color: rgba(0, 237, 0, 1)
+}
+
+th,
+td {
+    border: 1px solid #000;
+    padding: 8px;
+    text-align: center;
+}
+.supp {
+    background-color: red;
+    color: #fff;
+    border: 1px solid #000;
+}
+
+
